// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Select Input/Item selected text only 1`] = `
.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 {
  width: 300px;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    Hello
    <i
      className="icon wg-check"
    />
  </div>
</div>
`;

exports[`Storyshots Select Input/Item selected with image 1`] = `
.c4 {
  background-origin: border-box;
  background-repeat: no-repeat;
  box-sizing: border-box;
  min-width: 40px;
  min-height: 40px;
  width: 40px;
  height: 40px;
  overflow: hidden;
  border: solid 1px rgba(0,0,0,0.16);
  border-radius: 4px;
  background-image: url(https://picsum.photos/100);
  background-size: cover;
  background-position: center;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
}

.c2 > input {
  width: 100%;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c3 {
  margin: -6px;
  margin-right: 8px;
}

.c0 {
  width: 300px;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <div
        className="c3 c4"
        size={40}
        src="https://picsum.photos/100"
      />
       
      Hello
    </div>
    <i
      className="icon wg-check"
    />
  </div>
</div>
`;

exports[`Storyshots Select Input/Item text only 1`] = `
.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 {
  width: 300px;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    Hello
  </div>
</div>
`;

exports[`Storyshots Select Input/Item with image 1`] = `
.c4 {
  background-origin: border-box;
  background-repeat: no-repeat;
  box-sizing: border-box;
  min-width: 40px;
  min-height: 40px;
  width: 40px;
  height: 40px;
  overflow: hidden;
  border: solid 1px rgba(0,0,0,0.16);
  border-radius: 4px;
  background-image: url(https://picsum.photos/100);
  background-size: cover;
  background-position: center;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
}

.c2 > input {
  width: 100%;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c3 {
  margin: -6px;
  margin-right: 8px;
}

.c0 {
  width: 300px;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <div
        className="c3 c4"
        size={40}
        src="https://picsum.photos/100"
      />
       
      Hello
    </div>
  </div>
</div>
`;

exports[`Storyshots Select Input/Item withID 1`] = `
.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 {
  width: 300px;
}

<div
  className="c0"
>
  <div
    className="c1"
    id="Select-item-withId"
  >
    Hello
  </div>
</div>
`;
